Get Spark and Metals to play nice